[project]
name = "mc-creative-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "nbtlib>=2.0.4",
    "platformdirs>=4.9.4",
    "questionary>=2.1.1",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "prettier>=0.0.7",
]
